fdo#51639 soffice.exe --version displays a dialog box with the version number

Change-Id: I3656c005a23d291bc7cde2bc461e584df342babf